# Pierogi-2D

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/engine/: Application.cpp  Application.h  Directories.h  ResourceManager.h
src/engine/logger/: CMakeLists.txt  Logger.cpp  Logger.h  ValueField.cpp  ValueField.h
